nginx-ingress/ingress-nginx-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-1
spec:
  rules:
  - host: nginx.belajarlinux.web.id
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
